--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     <hr>
     <div class="bottom">
         <p><a class="more" href="personal-details.html">More</a></p>
-        <p><a href="../css - mysite/index.html" class="more" target="target">Postfolio</a>
+        <p><a href="https://kanhabhawani.github.io/my-portfolio/" class="more" target="target">Postfolio</a>
         </p>
     </div>
     <!-- <hr size="3" noshade="noshade"> -->
